# vectorizer-api

./: .dockerignore  .gitignore  .mise.toml  Dockerfile  README.md  cloudbuild.yaml  env.example  pyproject.toml
.devcontainer/: devcontainer.json  postAttachCommand.sh
infra/: README.md
infra/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  variables.tf
infra/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
infra/modules/cloud_build_trigger/: main.tf  output.tf  variables.tf
infra/modules/cloud_run/: main.tf  output.tf  variables.tf
infra/modules/iam/: main.tf  output.tf  variables.tf
notebooks/dreamsim/: client.ipynb  server.ipynb
notebooks/poc/: dreamsim.ipynb
notebooks/vectorize_image/: server.ipynb
notebooks/vectorize_text/: client.ipynb  server.ipynb
src/vectorizer_api/: di.py  gunicorn.conf.py  settings.py
src/vectorizer_api/app/: router.py  server.py
src/vectorizer_api/domain/factory/: vectorizer_factory.py
src/vectorizer_api/domain/model/: errors.py  vectorize.py
src/vectorizer_api/domain/service/: vectorizer.py
src/vectorizer_api/infra/factory/: vectorizer_factory.py
src/vectorizer_api/infra/service/image_vectorizer/: dreamsim.py
src/vectorizer_api/infra/service/text_vectorizer/: sentence_bert.py
src/vectorizer_api/usecase/ui/: vectorizer.py
src/vectorizer_api/utils/: file.py  image.py  logger.py  time.py
